moving js script files to folder

--- a/quizapp.html
+++ b/quizapp.html
@@ -76,7 +76,7 @@
       </div>
     </main>
 
-    <script src="quizappquestions.js"></script>
-    <script src="quizappscript.js"></script>
+    <script src="/public/script/quizappquestions.js"></script>
+    <script src="/public/script/quizappscript.js"></script>
   </body>
 </html>
