another try and test

--- a/quizapp.html
+++ b/quizapp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/css/quizappstyle.css" />
+    <link rel="stylesheet" href="quizappstyle.css" />
 
     <link
       rel="stylesheet"
@@ -46,7 +46,7 @@
           <div class="quiz_timer">
             <span class="material-symbols-outlined timer_icon"> timer </span>
             <p class="time_duration">15s</p>
-            <audio class="clock_audio" src="public/audio/count-down-clock.wav" preload="auto" type="audio/wav"></audio>
+            <audio class="clock_audio" src="count-down-clock.wav" preload="auto" type="audio/wav"></audio>
           </div>
         </header>
 
@@ -65,7 +65,7 @@
       <div class="result_container">
         <img
           class="result_img"
-          src="public/images/party-popper-congratulation.png"
+          src="party-popper-congratulation.png"
           alt="congrartulation-icon"
         />
         <h2 class="result_title"></h2>
@@ -76,7 +76,7 @@
       </div>
     </main>
 
-    <script src="public/script/quizappquestions.js"></script>
-    <script src="public/script/quizappscript.js"></script>
+    <script src="quizappquestions.js"></script>
+    <script src="quizappscript.js"></script>
   </body>
 </html>
